--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "mongodb": "^6.17.0",
+    "openai": "^5.11.0",
     "stripe": "^18.3.0"
   }
 }
